--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,10 @@
 .App {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   margin: 2rem auto;
 }
-
-.App > h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  letter-spacing: 4px;
-  transform: scale(1, 1.1);
-  color: #004;
-  display: block !important;
+.makeStyles-root-1 {
+  display: flex !important;
 }
