--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,15 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  letter-spacing: 4px;
+  transform: scale(1, 1.1);
+  color: #004;
+  display: block !important;
+}
