--- a/src/App.css
+++ b/src/App.css
@@ -12,13 +12,12 @@
   font-size: larger !important;
 }
 .MuiTabs-indicator {
-  display: none !important;
+  border-right: 3px solid rebeccapurple !important;
 }
 .Mui-selected {
-  border-right: 3px solid rebeccapurple !important;
-  color: royalblue !important;
+  color: rebeccapurple !important;
 }
 .MuiTabs-flexContainerVertical > button:not(.Mui-selected):hover {
-  color: darkblue !important;
+  color: rebeccapurple !important;
   background-color: rgba(0, 0, 150, 0.15) !important;
 }
